--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <title>Welcome to Some title</title>
 </head>
+
 <body>
     {% if user.is_authenticated %}
     <a href="{% url 'profile' %}">Profile</a>
@@ -24,4 +26,5 @@
     <p>Please come back later.</p>
     {% endif %}
 </body>
+
 </html>
