--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile</title>
+    <a href="/" onclick="return confirm('Вы уверены, что хотите вернуться на главную страницу?')">🏠 Домой</a>
 </head>
 <body>
     {% if request.user == profile_user %}
