--- a/templates/users/signin.html
+++ b/templates/users/signin.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sign In</title>
+    <a href="/" onclick="return confirm('Вы уверены, что хотите вернуться на главную страницу?')">🏠 Домой</a>
 </head>
 <body>
     <h1>Sign In</h1>
