--- a/templates/users/edit_profile.html
+++ b/templates/users/edit_profile.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit Profile</title>
+    <a href="/" onclick="return confirm('Вы уверены, что хотите вернуться на главную страницу? Все ваши изменения отменятся!!!')">🏠 Домой</a>
 </head>
 <body>
     <h1>Edit Profile</h1>
