--- a/templates/ads/detail.html
+++ b/templates/ads/detail.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html>
-    {% load static %}
 <head>
     <title>Ad Detail</title>
     <a href="/" onclick="return confirm('Вы уверены, что хотите вернуться на главную страницу?')">🏠 Домой</a>
 </head>
 
 <body>
-    <div class="container">
-        {% block content %}
-        <h1>{{ ad.title }}</h1>
-        <p>{{ ad.description }}</p>
-        <p>Status of this ad: {{ ad.status }}</p>
-        <img src="{{ ad.image.url }}" alt="Ad's Image">
-        <p>{{ ad.image.url }}</p>
-        {% endblock %}
-    </div>
+    <h1>{{ ad.title }}</h1>
+    <p>{{ ad.description }}</p>
+    <p>Status of this ad: {{ ad.status }}</p>
+    <img src="{{ ad.image.url }}" alt="Ad's Image">
+    <p>{{ ad.image.url }}</p>
+    {% if ad.user != request.user %}
     <div class="user_choise">
-        {% block user's_choise %}
         <p>Want to trade?</p>
         <form method="post">
-            {% csrf_token %}
             <input type="radio" id="yes" name="choice" value="yes">
             <label for="yes">Yes</label><br>
 
@@ -29,6 +23,12 @@
 
             <button type="submit">Trade</button>
         </form>
-        {% endblock %}
     </div>
+    {% else %}
+    <a href="{% url 'ad_edit' ad.id %}">✏️ Редактировать</a>
+    <form action="{% url 'ad_delete' ad.id %}" method="post" style="display:inline;">
+        {% csrf_token %}
+        <button type="submit" onclick="return confirm('Точно удалить?')">🗑️ Удалить</button>
+    </form>
+    {% endif %}
 </body>
